@@ -14,6 +14,13 @@
  * limitations under the License.
  */
 
+apply from: "gradle/maven.gradle"
+
+apply plugin: 'groovy'
+
+archivesBaseName = modulename
+group = groupname
+
 apply plugin: 'java'
 
 defaultTasks = ['assemble']
@@ -21,7 +28,9 @@ defaultTasks = ['assemble']
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
 
-jar.enabled = false // We don't produce a jar
+// We don't produce a jar
+jar.enabled = false
+assert configurations.archives.artifacts.removeAll { it.file == jar.archivePath }
 
 configurations {
   provided
@@ -58,54 +67,46 @@ sourceSets {
 }
 
 task copyMod( type:Copy, dependsOn: 'classes' ) {
-  into "build/mod/$modulename-v$version"
-  from 'build/classes/main'
+  into "build/mod/$groupname.$modulename-v$version"
+  from compileJava
   from 'src/main/conf'
   from 'src/main/api_shim'
-//  into( 'lib' ) {
-//    from configurations.compile
-//  }
-  //NOTE! That we copy the patched jython jar from extralibs, we
-  //DO NOT use the version from Maven
-  //See the README in there for reasons why
-  into('lib') {
-    from 'extralibs'
+  from 'src/main/coffeescript'
+  into( 'lib' ) {
+    from configurations.compile
   }
 }
 
 // Package into build/libs/mod.zip
-task dist( type: Zip, dependsOn: 'copyMod' ) {
+task dist( type: Zip) {
   group = 'vert.x'
-  description = "Assembles a vert.x module in 'mod.zip' format"
+  description = "Assembles a vert.x module"
   destinationDir = project.file('build/libs')
-  archiveName = 'mod.zip'
-  from project.file("build/mod")
+  archiveName = "${modulename}-${version}" + ".zip"
+  //archiveName = "mod.zip"
+  from copyMod, {
+    into copyMod.destinationDir.name
+  }
 }
 
+artifacts {
+  archives dist
+}
 
-task prepareVertxTest(type: Copy, dependsOn: ['copyMod', 'deleteCopiedMod'] ) {
-  from 'build/mod'
+task prepareVertxTest(type: Sync, dependsOn: dist) {
+  from zipTree(dist.archivePath)
   into 'src/test/mod-test' // Copy the mod into the mods directory
 }
 
-task deleteCopiedMod {
-  outputs.upToDateWhen { false }
-  delete "src/test/mod-test/$modulename-v$version"
-}
+test {
+  dependsOn prepareVertxTest
 
-test() {
-
-  // Remove any classpath entries for the classes or resources of the jruby verticle and also remove the
-  // jython jar from the classpath
+  // Remove any classpath entries for the classes or resources of the rhino verticle and also remove the
+  // Rhino jar from the classpath
   // If we don't do this then the system classloader will load them which can cause issues with loading resources
   // from inside JS verticles
-  classpath = files( classpath.findAll {
-    (!( it.toString() ==~ /.+build\/(classes|resources)\/main$/ )) && !(it.toString().contains("org.python"))
-  } )
-
-//  classpath.each {
-//    println "entry ${it}"
-//  }
+  classpath -= sourceSets.main.output
+  classpath -= configurations.compile
 
   outputs.upToDateWhen { false }
 
@@ -113,13 +114,11 @@ test() {
   systemProperty 'vertx.test.timeout', 15
   systemProperty 'vertx.mods', "$projectDir/src/test/mod-test"  // Set vertx.mods to the mod directory
   systemProperty 'vertx.version', "$project.version"
-  jvmArgs '-XX:+CMSClassUnloadingEnabled', '-XX:-UseGCOverheadLimit', '-XX:MaxPermSize=256m'
 
   // Show output
   testLogging.showStandardStreams = true
 
-  // No idea why we need to depend on testClasses...
-  dependsOn << [ 'testClasses', 'copyMod', 'prepareVertxTest' ]
+  testLogging { exceptionFormat "full" }
 }
 
 
@@ -132,20 +131,5 @@ task collectDeps(type: Copy) {
   }
   into("test") {
     from configurations.testCompile
-  }
-}
-
-task pydoc(type: Exec) {
-  ignoreExitValue true
-  workingDir = project.projectDir
-
-  commandLine = [ System.getenv()['JYTHON_HOME'] + "/jython",
-      "-Dproj.base=${project.projectDir}",
-      "-Dpython.path=${project.projectDir}/src/build_tools/doclib" + System.properties['path.separator'] + "src/main/python_scripts",
-      "-Dproj.base=$project.projectDir.path",
-      "${project.projectDir}/src/build_tools/pydocx.py" ]
-
-  if( System.properties['os.name'].toLowerCase().contains('windows') ) {
-    commandLine = ['cmd', '/c'] + commandLine
   }
 }
